# CMake_Lab

lab1/: CMakeLists.txt  README.md
lab2/: CMakeLists.txt  README.md
lab3/: CMakeLists.txt  README.md
lab4/: CMakeLists.txt  README.md
lab5/: CMakeLists.txt  README.md
lab6/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app  cmake_install.cmake  main.cpp
lab7/: CMakeLists.txt  README.md
lab7/calc/: CMakeLists.txt
lab7/sort/: CMakeLists.txt  insert.cpp
lab7/test1/: CMakeLists.txt  calc.cpp
lab7/test2/: CMakeLists.txt  sort.cpp
lab8/: CMakeLists.txt  README.md
lab8/include/: sort.h
lab8/sort/: CMakeLists.txt  insert.cpp
lab8/test/: CMakeLists.txt
lab9/: README.md
lab9/calc/: CMakeLists.txt  div.cpp  mult.cpp  sub.cpp
lab9/include/: calc.h
lab9/sort/: CMakeLists.txt  select.cpp
